[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
indextree = "4.5.0"
paste = "1.0.9"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
text_io = "0.1.12"

[profile.release]
panic = "abort"
opt-level = 3
rpath = false
strip = true
lto = true
codegen-units = 1
